[gd_scene load_steps=6 format=3 uid="uid://b38g5skv133ho"]

[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_3cjlb"]
[ext_resource type="PackedScene" uid="uid://cmeenjxx488s4" path="res://scenes/deck.tscn" id="1_y4nrd"]
[ext_resource type="PackedScene" uid="uid://dcjeoc5ftt0i6" path="res://scenes/added_hands.tscn" id="2_kqmhj"]
[ext_resource type="PackedScene" uid="uid://bicuf53556qyp" path="res://scenes/control_box.tscn" id="3_5t3nl"]
[ext_resource type="PackedScene" uid="uid://pgm51flprm73" path="res://scenes/import_deck.tscn" id="5_nnu4f"]

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_3cjlb")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
offset_right = 1080.0
offset_bottom = 720.0
color = Color(0.270588, 0.243137, 0.215686, 1)

[node name="Deck" parent="." instance=ExtResource("1_y4nrd")]

[node name="AddedHands" parent="." instance=ExtResource("2_kqmhj")]
position = Vector2(217, 0)

[node name="ControlBox" parent="." instance=ExtResource("3_5t3nl")]
position = Vector2(898, 133)

[node name="ImportDeck" parent="." instance=ExtResource("5_nnu4f")]
visible = false
z_index = 1
position = Vector2(-5, 241)

[node name="Button" type="Button" parent="."]
offset_left = 7.0
offset_top = 50.0
offset_right = 211.0
offset_bottom = 88.0
text = "import deck"

[node name="reset_button" type="Button" parent="."]
offset_left = 898.0
offset_top = 93.0
offset_right = 1067.0
offset_bottom = 126.0
text = "reset"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
